BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Assortment_Link_vod__c.object
<CustomObject>
    <description>Assortment Link contains the link information between Assortment and other entities</description>
    <fields>
        <fullName>Assortment_vod__c</fullName>
        <description>Link to the Assortment record to which this link is related.</description>
        <label>Assortment</label>
        <referenceTo>Assortment_vod__c</referenceTo>
        <relationshipLabel>Assortment Links</relationshipLabel>
        <relationshipName>Assortment_Links_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for data loads.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Campaign_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to link an Order Campaign to the Assortment</description>
        <label>Order Campaign</label>
        <referenceTo>Order_Campaign_vod__c</referenceTo>
        <relationshipLabel>Assortment Links</relationshipLabel>
        <relationshipName>Assortment_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Assortment Link</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LK{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assortment Links</pluralLabel>
    <recordTypes>
        <fullName>Campaign_Assortment_Link_vod</fullName>
        <active>true</active>
        <description>Campaign Assortment Link</description>
        <label>Order Assortment Link</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>